--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,7 @@
   <div class="container">
     <h1 class="logo"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title_left }}<span>{{ site.title_right }}</span></a></h1>
     <ul class="navbar">
+      <li><a href="https://www.youtube.com/channel/UCUBHBUa0BI-xy4z7ulwO0vQ"><b>Youtube</b></a></li>
       <li><a href="{{ '/hakkimda' | prepend: site.baseurl | prepend: site.url }}">Hakkımda</a></li>
       <li><a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" target="_blank">RSS</a></li>
     </ul>
