Google site ver.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="google-site-verification" content="mtp59BgktzeEZdFySgYw33JFt2kZ51lC746FRXBYTcg">
+  <meta name="google-site-verification" content="qy0E6a-HOyyqHVZJ6JDrfSX3i-PL3X_4bcKTG0ZBMQo" />
 
   {% assign page_title = '' %}
   {% if page.title == "Home" %}
